# data_engineer_newsletter

./: README.md  crew.py  main.py  model.py  pyproject.toml  report.md
config/: agents.yaml  tasks.yaml
tools/: get_content.py  rss_tool.py
